차량예약 > 예약하기 > 대여예약 약관동의, button.scss에  버튼 icon 타입의 높이값 초기화

--- a/src/include/header.html
+++ b/src/include/header.html
@@ -39,6 +39,23 @@
 			</header>
 			}
 
+			@@if (type === "sub_02"){
+				<!-- 뒤로가기 버튼 |  타이틀  | 세팅 버튼 -->
+				<header id="header">
+					<div class="head-cont">
+						<div class="head-wrap">
+							<div class="head">
+								<div class="left">
+									<button type="button" class="btn-head">
+										<i class="ico back lg"></i>
+									</button>
+								</div>
+								<h2 class="title">@@title</h2>
+						</div>
+					</div>
+				</header>
+				}
+
 			@@if (type === "search"){
 			<!-- 뒤로가기 버튼 |  타이틀  | 세팅 버튼 -->
 			<header id="header">
