차량예약 > 예약하기 > 그린카 금연 서약

--- a/src/scss/_button.scss
+++ b/src/scss/_button.scss
@@ -131,7 +131,7 @@ $btn-size: (
 
 		&.single{
 			display:block;
-			text-align:center;
+			text-align:right;
 			.btn{
 				display:inline-flex;
 			}
