--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -169,7 +169,7 @@ button,
 input,
 select,
 textarea {
-    color: #333;
+    color:$navy-070;
     font-size: 15px;
     font-weight: 400;
     font-family: 'Noto Sans KR', sans-serif;
