--- a/src/scss/_tab.scss
+++ b/src/scss/_tab.scss
@@ -61,8 +61,8 @@
 			
 			&.active{
 				color:$gray-000;
-				border-color:$btn-primary;
-				background-color:$btn-primary;
+				border-color:$green-060;
+				background-color:$green-060;
 			}
 
 			&:first-child{
