--- a/src/scss/_layer.scss
+++ b/src/scss/_layer.scss
@@ -125,69 +125,87 @@ html.is-open, html.is-open body {
     }
     // full size
     &.type-full {
+        align-items: flex-end;
         padding: 0;
-        .layer-container {
-            display: flex;
-            flex-direction: column;
-            height: 100%;
-			border-radius: 0;
-            .layer-header {
-                flex: 0 0 auto;
-				padding:0;
+		.layer-header {
+			flex: 0 0 auto;
+			padding:0;
 
-				.head{
-					position:relative;
-					display: flex;
-					height:66px;
-					justify-content: center;
-					align-items: center;
-
-					&.popup{
-						border-bottom:0;
-					}
-
-					.title{
-						width:100%;
-						height:100%;
-						padding:0 60px;
-						border-bottom:1px solid #D9D9D9;
-						line-height:66px;
-						text-align:center;
-						@include ell;
-					}
-	
-					.left{
-						display:flex;
-						position:absolute;
-						top:0;
-						left:20px;
-						height:100%;
-					}
-	
-					.right{
-						display:flex;
-						position:absolute;
-						top:0;
-						right:20px;
-						height:100%;
-					}
-				}
-
-            }
-            .layer-body {
-                flex: 1;
-            }
-            .layer-footer {
+			.head{
 				position:relative;
-				z-index:5;
-                flex: 0 0 auto;
-                margin-top: auto;
-				padding:0;
-				.btn-wrap{
-					padding:0;
+				display: flex;
+				height:66px;
+				justify-content: center;
+				align-items: center;
+
+				&.popup{
+					border-bottom:0;
 				}
+
+				.title{
+					width:100%;
+					height:100%;
+					padding:0 60px;
+					border-bottom:1px solid #D9D9D9;
+					line-height:66px;
+					text-align:center;
+					@include ell;
+				}
+
+				.left{
+					display:flex;
+					position:absolute;
+					top:0;
+					left:20px;
+					height:100%;
+				}
+
+				.right{
+					display:flex;
+					position:absolute;
+					top:0;
+					right:20px;
+					height:100%;
+				}
+			}
+
+		}
+		.layer-body {
+			flex: 1;
+		}
+		.layer-footer {
+			position:relative;
+			z-index:5;
+			flex: 0 0 auto;
+			margin-top: auto;
+			padding:0;
+			.btn-wrap{
+				padding:0;
+			}
+		}
+
+        &:before {
+			opacity: 0;
+            transition: opacity 0.3s cubic-bezier(1, 0, 1, 1);
+        }
+        &.active {
+			&:before {
+				opacity: 1;
+                transition: opacity 0.3s cubic-bezier(0, 0, 0, 1);
+            }
+            .layer-container {
+				// transform: none;
+				transform: translateY(0%);
             }
         }
-    }
+        .layer-container {
+			border-radius: 0;
+            opacity: 1;
+			height:100%;
+            transform: translateY(100%);
+            transition: transform 0.8s;
+        }
+	}
 }
-
+	
+	
