--- a/src/scss/_reservation.scss
+++ b/src/scss/_reservation.scss
@@ -7,26 +7,6 @@
     align-items: center;
 }
 
-.layer-body {
-    .box {
-        padding: 20px;
-        margin-top: 20px;
-        border: 1px solid #ccc;
-        border-radius: 8px;
-        background-color: #f2f2f2;
-        .desc-list {
-            li + li {
-                margin-top: 8px;
-            }
-            .name {
-                display: inline-block;
-                width: 80px;
-                font-weight: bold;
-            }
-        }
-    }
-}
-
 .reservation {
     position: relative;
     .wrap {
@@ -65,7 +45,15 @@
     }
     .gc-tab {
         margin: 0 -20px;
-        border-bottom: 2px solid #d9dddf;
+        border-bottom: none;
+        &:after{
+            content: " ";
+            display: block;
+            height: 2px;
+            background-color: #d9dddf;
+            position: relative;
+            bottom: 2px;
+        }
         ul {
             padding: 0 20px;
             li {
@@ -106,8 +94,35 @@
             }
         }
     }
+    section{
+        padding: 22px 0 30px;
+        h2{
+            color: $navy-070;
+            font-size: 20px;
+            font-weight: bold;
+            margin-bottom: 20px;
+            + p{
+                font-size: 16px;
+                font-weight: 500;
+            }
+        }
+        h3{
+            margin-top: 20px;
+            color: $navy-070;
+            font-size: 16px;
+            font-weight: 500;
+        }
+        .list{
+            margin-top: 10px;
+            li + li{
+                margin-top: 10px;
+            }
+        }
+
+    }
 }
 
+// 약관 동의
 .agreement {
     .gc-checkbox {
         display: block;
@@ -144,43 +159,13 @@
             }
         }
     }
-    .inner{
+    .inner {
         padding: 0 4px 0 10px;
     }
 }
-.checkbox {
-    input[type="checkbox"] {
-        display: none;
-    }
-    label {
-        display: flex;
-        align-items: center;
-        font-size: 18px;
-        font-weight: 500;
-        &:before {
-            content: " ";
-            display: block;
-            width: 26px;
-            height: 26px;
-            background: url(#{$url-ico}check_default.svg) left center no-repeat;
-            margin-right: 10px;
-        }
-    }
-    input[type="checkbox"]:checked {
-        & + label {
-            color: $green-060;
-            &:before {
-                content: " ";
-                display: block;
-                width: 26px;
-                height: 26px;
-                background: url("../images/icon/check_green.svg") left center no-repeat;
-            }
-        }
-    }
-}
 
-.cont.coupon {
+// [화면] 할인/적립 - 쿠폰
+.coupon {
     .section {
         padding: 26px 0 30px;
     }
@@ -203,8 +188,80 @@
         font-size: 16px;
         font-weight: 700;
     }
+
+    .coupon-list {
+        margin-top: 18px;
+        > * + * {
+            margin-top: 16px;
+        }
+        .coupon-item {
+            padding: 24px;
+            border: 1px solid $navy-020;
+            border-radius: $border-radius;
+            position: relative;
+            background: url(../images/common/g-mark.svg) no-repeat right 18px;
+            .discount-type {
+                display: inline-flex;
+                align-items: center;
+                color: $navy-050;
+                font-size: 12px;
+                height: 22px;
+                padding: 0 12px;
+                background-color: $navy-010;
+                border-radius: 2rem;
+            }
+            .discount-value {
+                margin-top: 4px;
+                @include flex-center();
+                span {
+                    &:nth-child(1) {
+                        color: $navy-030;
+                        font-size: 18px;
+                        font-weight: 700;
+                    }
+                    &:nth-child(2) {
+                        color: $green-040;
+                        font-size: 12px;
+                        margin-left: 4px;
+                    }
+                }
+            }
+            .discount-value + p {
+                margin-top: 8px;
+                font-size: 12px;
+                color: $navy-070;
+            }
+            .effective-date {
+                margin-top: 4px;
+                @include flex-center();
+                .date {
+                    color: $navy-040;
+                    font-size: 14px;
+                }
+                .date + * {
+                    margin-left: 4px;
+                }
+            }
+            &.expired {
+                border: 0;
+                &:before {
+                    content: "";
+                    display: block;
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                    border-radius: $border-radius;
+                    border: 1px solid #989b9d;
+                    background-color: rgba($color: #40535e, $alpha: 0.4);
+                    z-index: 10;
+                }
+            }
+        }
+    }
 }
-.btn-sort {
+.btn-filter {
     height: 34px;
     padding: 0 12px;
     background-color: #fff;
@@ -212,8 +269,8 @@
     border-radius: 2rem;
     position: fixed;
     left: 50%;
-    transform: translateX(-50%);
     bottom: 40px;
+    transform: translateX(-50%);
     z-index: 100;
     box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.25);
     @include flex-center();
@@ -224,73 +281,62 @@
     }
 }
 
-.coupon-list {
-    margin-top: 18px;
-    > * + * {
-        margin-top: 16px;
+// [팝업] 예약결제 안내
+.layer-body {
+    .box {
+        padding: 16px 40px;
+        margin-top: 20px;
+        border-radius: 8px;
+        background-color: $navy-010;
+        .desc-list {
+            font-size: 14px;
+            li + li {
+                margin-top: 4px;
+            }
+            .name {
+                display: inline-block;
+                width: 80px;
+                margin-right: 8px;
+                color: #8c989e;
+            }
+            .value {
+                color: #303e47;
+                font-weight: 500;
+            }
+        }
     }
-    .coupon-item {
-        padding: 24px;
-        border: 1px solid $navy-020;
-        border-radius: $border-radius;
-        position: relative;
-        background: url(../images/common/g-mark.svg) no-repeat right 18px;
-        .discount-type {
-            display: inline-flex;
-            align-items: center;
-            color: $navy-050;
-            font-size: 12px;
-            height: 22px;
-            padding: 0 12px;
-            background-color: $navy-010;
-            border-radius: 2rem;
+}
+
+// [팝업] 그린카 금연서약
+.layer-body {
+    .wrap {
+        p {
+            color: $navy-040;
         }
-        .discount-value {
-            margin-top: 4px;
-            @include flex-center();
-            span {
-                &:nth-child(1) {
-                    color: $navy-030;
-                    font-size: 18px;
-                    font-weight: 700;
-                }
-                &:nth-child(2) {
-                    color: $green-040;
-                    font-size: 12px;
-                    margin-left: 4px;
-                }
-            }
+        .emphasis {
+            color: $green-060;
+            font-size: 14px;
+            font-weight: 500;
+            margin-top: 12px;
         }
-        .discount-value + p {
-            margin-top: 8px;
-            font-size: 12px;
+        .sign {
+            margin-top: 20px;
             color: $navy-070;
-        }
-        .effective-date {
-            margin-top: 4px;
-            @include flex-center();
-            .date {
-                color: $navy-040;
-                font-size: 14px;
-            }
-            .date + * {
+            font-size: 16px;
+            font-weight: 500;
+            text-align: right;
+            em {
                 margin-left: 4px;
+                font-weight: 700;
             }
         }
-        &.expired {
-            border: 0;
-            &:before {
-                content: "";
-                display: block;
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-                border-radius: $border-radius;
-                border: 1px solid #989b9d;
-                background-color: rgba($color: #40535e, $alpha: 0.4);
-                z-index: 10;
+    }
+}
+.layer-footer {
+    .btn-group {
+        &.single {
+            .btn {
+                min-width: 135px;
             }
         }
     }
@@ -330,38 +376,33 @@ hr.divider {
     }
 }
 
-
-// 그린카 금연서약
-.layer-body{
-    .wrap{
-        p{
-            color: $navy-040;
-        }
-        .emphasis{
-            color: $green-060;
-            font-size: 14px;
-            font-weight: 500;
-            margin-top: 12px;
-        }
-        .sign{
-            margin-top: 20px;
-            color: $navy-070;
-            font-size: 16px;
-            font-weight: 500;
-            text-align: right;
-            em{
-                margin-left:4px;
-                font-weight: 700;
-
-            }
+.checkbox {
+    input[type="checkbox"] {
+        display: none;
+    }
+    label {
+        display: flex;
+        align-items: center;
+        font-size: 18px;
+        font-weight: 500;
+        &:before {
+            content: " ";
+            display: block;
+            width: 26px;
+            height: 26px;
+            background: url(#{$url-ico}check_default.svg) left center no-repeat;
+            margin-right: 10px;
         }
     }
-}
-.layer-footer{
-    .btn-group{
-        &.single{
-            .btn{
-                min-width: 135px;
+    input[type="checkbox"]:checked {
+        & + label {
+            color: $green-060;
+            &:before {
+                content: " ";
+                display: block;
+                width: 26px;
+                height: 26px;
+                background: url(#{$url-ico}check_green.svg) left center no-repeat;
             }
         }
     }
