공통 수정 및 버튼 추가

--- a/src/components/button.html
+++ b/src/components/button.html
@@ -55,19 +55,19 @@ h2 {
 					<!-- Button -->
 					<div class="tmp-guide-box guide-btn">
 						<h2 class="guide-box-tit">Button Border</h2>
-						<button type="button" class="btn line">Button</button>
-						<button type="button" class="btn success line">Button</button>
-						<button type="button" class="btn info line">Button</button>
-						<button type="button" class="btn warning line">Button</button>
-						<button type="button" class="btn danger line">Button</button>
+						<button type="button" class="btn line">Line</button>
+						<button type="button" class="btn success line">Line</button>
+						<button type="button" class="btn info line">Line</button>
+						<button type="button" class="btn warning line">Line</button>
+						<button type="button" class="btn danger line">Line</button>
 					</div>
 
 					<div class="tmp-guide-box guide-btn">
 						<h2 class="guide-box-tit">Button Size</h2>
 						<button type="button" class="btn">Button</button>
-						<button type="button" class="btn green">Button</button>
-						<button type="button" class="btn green lg">Button</button>
-						<button type="button" class="btn xl">Button</button>
+						<button type="button" class="btn green md">Button md</button>
+						<button type="button" class="btn green lg">Button lg</button>
+						<button type="button" class="btn xl">Button xl</button>
 						<br><br>
 						<button type="button" class="btn full" disabled>disabled Button</button>
 						<button type="button" class="btn full">Full Button</button>
@@ -76,6 +76,9 @@ h2 {
 					<div class="tmp-guide-box guide-btn">
 						<h2 class="guide-box-tit">Button Icon</h2>
 
+						<button type="button" class="btn line check">Check</button>
+						<button type="button" class="btn line check active">Check</button>
+						<button type="button" class="btn line check" disabled>Check</button>
 						<button type="button" class="btn line plus">Button</button>
 					</div>
 
@@ -84,7 +87,7 @@ h2 {
 				<!-- row -->
 				<div class="btn-wrap">
 					<div class="btn-group">
-						<button type="button" class="btn sm">test</button>
+						<button type="button" class="btn cancle sm">test</button>
 						<button type="button" class="btn sm">test</button>
 					</div>
 				</div>
