--- a/src/components/form.html
+++ b/src/components/form.html
@@ -56,7 +56,7 @@ h2{margin-bottom:20px;font-size:30px}
 						<span>Switch disabled</span>
 					</label>
 					<br><br>
-					<label for="tmpSwitch03" class="gc-switch">
+					<label for="tmpSwitch03" class="gc-switch green">
 						<input type="checkbox" id="tmpSwitch03">
 						<span>Switch disabled</span>
 					</label>
