--- a/src/components/tab.html
+++ b/src/components/tab.html
@@ -45,6 +45,17 @@
 							<h2 class="guide-box-tit">Button Tab</h2>
 
 							<div class="btn-tab">
+								<div class="gc-tab">
+									<ul>
+										<li><a href="#" class="active">쿠폰</a></li>
+										<li><a href="#">KT멤버십</a></li>
+										<li><a href="#">T멤버십</a></li>
+									</ul>
+									<span class="tab-indicator"></span>
+								</div>
+
+								<br><br>
+
 								<div class="scroll-area">
 									<button type="button" class="btn line xs active">그린존 전체</button>
 									<button type="button" class="btn line xs">공항</button>
