--- a/src/components/icon.html
+++ b/src/components/icon.html
@@ -72,6 +72,10 @@
                                 <span class="icon"><i class="ico home lg"></i></span>
                                 <span class="text">home</span>
                             </li>
+							<li>
+                                <span class="icon"><i class="ico arrow-bot md"></i></span>
+                                <span class="text">arrow-bot</span>
+                            </li>
                             <li>
                                 <span class="icon"><i class="ico arrow-right lg"></i></span>
                                 <span class="text">arrow-right</span>
