--- a/src/scss/_icon.scss
+++ b/src/scss/_icon.scss
@@ -33,6 +33,7 @@ $icon-size: (
         "next-sm": "next_sm.svg",
         "arrow-right": "arrow-right.svg",
         "arrow-left": "arrow-left.svg",
+        "arrow-bot": "arrow-bot.svg",
         "star": "star.svg",
         "eye-on": "eye_on.svg",
         "eye-off": "eye_off.svg",
