--- a/src/scss/contents.scss
+++ b/src/scss/contents.scss
@@ -57,18 +57,32 @@
 	}
 }
 .tmp-faq-list {
+	
 	li {
 		display:flex;
 		flex-direction:column;
+		border-top:1px solid #f3f4f5;
 		button {
-			height:50px;
-			padding:0 20px;
-			border:1px solid gray;
+			position:relative;
+			height:55px;
+			font-size:$font-md;
+			color:$navy-040;
 			text-align:left;
 			@include ell;
+
+			.ico{
+				display:inline-flex;
+				position:absolute;
+				top:50%;
+				right:0;
+				transform:translate(0,-50%);
+				transition: all .3s;
+			}
 		}
 		&.active button {
-			background:gainsboro;
+			.ico{
+				transform:translate(0,-50%) rotate(180deg);
+			}
 		}
 		[data-box-type="accordion"] div {
 			padding:20px;
