차량예약 > 예약하기 > 할인/적립 >  -- 작업 중

--- a/src/scss/_button.scss
+++ b/src/scss/_button.scss
@@ -70,7 +70,7 @@ $btn-size: (
         color:$navy-040;
     }
 
-	&.cancle{
+	&.cancel{
 		@include buttonType ($navy-020, $gray-000, $navy-070);
 	}
 
