--- a/src/scss/_icon.scss
+++ b/src/scss/_icon.scss
@@ -42,6 +42,7 @@ $icon-size: (
         "search": "search.svg",
         "sort": "sort.svg",
         "badge-g": "badge-g.svg",
+        "plus": "plus.svg",
     )
     
 ) !default;
