list - sm사이즈 추가

--- a/src/scss/_reservation.scss
+++ b/src/scss/_reservation.scss
@@ -42,6 +42,17 @@
         li + li {
             margin-top: 24px;
         }
+        &.sm{
+            li{
+                font-size: 14px;
+                padding-left: 12px;
+                &:before {
+                    width: 3px;
+                    height: 3px;
+                    top: 8px;
+                }
+            }
+        }
     }
     .gc-tab {
         margin: 0 -20px;
@@ -355,9 +366,6 @@
         }
         .list {
             margin-top: 12px;
-            li {
-                font-size: 14px;
-            }
             li + li {
                 margin-top: 6px;
             }
